Agrego boton eliminar y su funcionalidad

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <td><input type="number" class="end-time"></td>
                     <td class="total-day"></td>
                     <td>
-                        <button class="btn-save">Guardar</button>
+                        <button class="btnSave">Guardar</button>
                     </td>
                 </tr>
             </tbody>
@@ -41,7 +41,8 @@
     </div>
 
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
+    
 </body>
 
 </html>
